--- a/racinggame/common.css
+++ b/racinggame/common.css
@@ -22,6 +22,7 @@ body          { font-family: 'Roboto', sans-serif; }
 #hud #speed            { float: right; }
 #hud #current_lap_time { float: left;  }
 #hud #last_lap_time    { float: left; display: none;  }
+#hud #current_Point    { float: left;}
 #hud #fast_lap_time    { display: block; width: 12em;  margin: 0 auto; text-align: center; transition-property: background-color; transition-duration: 2s; -webkit-transition-property: background-color; -webkit-transition-duration: 2s; }
 #hud .value            { color: black; font-weight: bold; }
 #hud .fastest          { background-color: rgba(255,215,0,0.5); }
