--- a/css/common.css
+++ b/css/common.css
@@ -26,3 +26,69 @@ body          { font-family: Arial, Helvetica, sans-serif; }
 #hud .value            { color: black; font-weight: bold; }
 #hud .fastest          { background-color: rgba(255,215,0,0.5); }
 
+.popup {
+    position: relative;
+    /*display: inline-block;*/
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    /*position: relative; */
+    z-index: 0;
+    width: 640px;
+     height: 480px;
+     margin-top: 150px;
+     margin-left: 20em;
+     border: 2px solid black;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 630px;
+    font-size: 8px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    /*position: relative;*/
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-top: 1200px;
+    margin-left: -315px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
