--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
 /* common styles used for v1 through v4 */
 /****************************************/
 
-body          { font-family: Arial, Helvetica, sans-serif; }
+body          { font-family: 'Roboto', sans-serif; }
 #stats        { border: 2px solid black; }
 #controls     { width: 28em; float: left; padding: 1em; font-size: 0.7em; }
 #controls th  { text-align: right; vertical-align: middle; }
@@ -22,6 +22,7 @@ body          { font-family: Arial, Helvetica, sans-serif; }
 #hud #speed            { float: right; }
 #hud #current_lap_time { float: left;  }
 #hud #last_lap_time    { float: left; display: none;  }
+#hud #current_Point    { float: left;}
 #hud #fast_lap_time    { display: block; width: 12em;  margin: 0 auto; text-align: center; transition-property: background-color; transition-duration: 2s; -webkit-transition-property: background-color; -webkit-transition-duration: 2s; }
 #hud .value            { color: black; font-weight: bold; }
 #hud .fastest          { background-color: rgba(255,215,0,0.5); }
@@ -39,7 +40,6 @@ body          { font-family: Arial, Helvetica, sans-serif; }
     z-index: 0;
     width: 640px;
      height: 480px;
-     margin-top: 150px;
      margin-left: 20em;
      border: 2px solid black;
 }
@@ -48,10 +48,10 @@ body          { font-family: Arial, Helvetica, sans-serif; }
 .popup .popuptext {
     visibility: hidden;
     width: 630px;
-    font-size: 8px;
-    background-color: #555;
+    font-size: .8em;
+    background-color: rgba(85,85,85,.8);;
     color: #fff;
-    text-align: center;
+    text-align: left;
     border-radius: 6px;
     padding: 8px 0;
     position: absolute;
@@ -59,8 +59,68 @@ body          { font-family: Arial, Helvetica, sans-serif; }
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-top: 1200px;
     margin-left: -315px;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+.popup form {
+  line-height: 30px;
+  margin-left: 220px;
+  opacity: 1;
+}
+
+.popup button {
+  margin-left: 220px;
+}
+
+[type='radio'] {
+  display: none;
+}
+.popup label,
+.popup input[type=text] {
+  min-width: 8em;
+  padding:5px;
+  background-color: #aaaaaa;
+  border-radius: .2em;
+  box-sizing: border-box;
+  opacity: 1;
+}
+
+.optionLabel {
+  width:8em;
+}
+
+.popup label:hover {
+  background-color: #5b5b5b;
+}
+
+.popup #phrase {
+  margin-left: -200px;
+}
+
+.popup input[type=radio] {
+  width:10em;
+}
+
+span#phrase {
+  background-color: #555;
+  opacity: 1;
+  padding:10px;
+  border-radius: 5px;
+  width: 600px;
+}
+
+.popup input[type=radio]:checked + label,
+.popup input:focus {
+  color: white;
+  background-color: black;
+  border: none;
 }
 
 /* Popup arrow */
@@ -78,17 +138,25 @@ body          { font-family: Arial, Helvetica, sans-serif; }
 /* Toggle this class - hide and show the popup */
 .popup .show {
     visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
+    -webkit-animation: fadeIn .5s;
+    animation: fadeIn .5s;
 }
 
+.sbefore{
+  color: #bbbec1;
+  font-size: 14px;
+}
+.safter{
+  color: #bbbec1;
+  font-size: 14px;
+}
 /* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
     from {opacity: 0;}
-    to {opacity: 1;}
+    to {opacity: .8;}
 }
 
 @keyframes fadeIn {
     from {opacity: 0;}
-    to {opacity:1 ;}
+    to {opacity:.8 ;}
 }
