Added CSS for current word in popup

--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -30,3 +30,9 @@ body {
 	background-color: #606060;
 
 }
+
+/* Style for highlighted word in popup */
+.current_word {
+	font-weight: bold;
+	text-decoration: underline;
+}
