--- a/css/common.css
+++ b/css/common.css
@@ -39,8 +39,8 @@ body          { font-family: 'Roboto', sans-serif; }
 
     /*position: relative; */
     z-index: 0;
-    width: 640px;
-     height: 480px;
+    /*width: 640px;
+     height: 480px;*/
      /*margin-left: 20em;*/
      /*border: 2px solid black;*/
 }
